clusters/talos-robbinsdale/apps/envoy-gateway-system/config/gateway-private.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: private
spec:
  addresses:
    - type: IPAddress
      value: 10.69.10.14
  gatewayClassName: private
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
    - name: raj-wildcard-https
      protocol: HTTPS
      port: 443
      hostname: "*.rajsingh.info"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
        - group: ''
          kind: Secret
          name: raj-wildcard-tls
    - name: luke-wildcard-https
      protocol: HTTPS
      port: 443
      hostname: "*.lukehouge.com"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
        - group: ''
          kind: Secret
          name: luke-wildcard-tls
    - name: kafka-listener
      protocol: TLS
      port: 9092
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Passthrough
