clusters/talos-robbinsdale/apps/envoy-gateway-system/config/gateway-ts.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: ts
spec:
  gatewayClassName: ts
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
    - name: wildcard-raj-https
      protocol: HTTPS
      port: 443
      hostname: "*.ts.rajsingh.info"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
        - group: ''
          kind: Secret
          name: raj-wildcard-ts-tls
    - name: wildcard-luke-https
      protocol: HTTPS
      port: 443
      hostname: "*.ts.lukehouge.com"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
        - group: ''
          kind: Secret
          name: luke-wildcard-ts-tls
